# cat-thief-game

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/component/: collision_box.rs  door.rs  id.rs  marker.rs  mod.rs  position.rs  state_target.rs  velocity.rs
src/component/behavior/: mod.rs  move_path.rs
src/component/graphics/: animation_speed.rs  draw_depth.rs  mod.rs  sprite.rs  sprite_frame.rs  visible.rs  walk_cycle.rs
src/component/inventory/: inventory.rs  mod.rs  wallet.rs
src/component/marker/: basic.rs  dialog.rs  ids.rs  mod.rs
src/cutscene/: intro.rs
src/dialog/: mod.rs  opening.ink  opening.toml
src/dialog/intro/: enter_alley.ink  opening.ink
src/drawable/: dialog.rs  loading.rs  mod.rs  sprite.rs
src/entity/: door.rs  mod.rs  player.rs  state_pickup.rs  wall.rs
src/entity/character/: mod.rs  mystery_man.rs
src/entity/meta/: dialog.rs  (+2 more)
src/font/: abyssinica.toml  caudex.toml  default.toml  mod.rs
src/image/: mod.rs
src/model/: cutscene.rs  direction.rs  item.rs  message.rs  mod.rs  money.rs  pretty_string.rs
src/plugin/: control.rs  cutscene.rs  debug.rs  dialog.rs  mod.rs
src/resource/: constant.rs  control_events.rs  control_scheme.rs  dialog_messages.rs  door_transition.rs  mod.rs
src/scene/: mod.rs
src/sprite/: male_pants.toml  male_walkcycle.toml  mod.rs
src/system/: cutscene.rs  mod.rs
src/tile_grid/: grassy.toml  mod.rs  town.tmx  town_inside.tmx
src/tile_set/: barrel.toml  brackish_water.toml  cabinets.toml  cement.toml  dirt.toml  grass.toml  house.toml  inside.toml  kitchen.toml  mod.rs  victoria.toml
(+39 files in other folders)
