cargo-features = ["edition"]

[package]
name = "steampunk-game"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
build = "build/mod.rs"
edition = "2018"

[dependencies]
game-engine = { path = "../game-engine/rust" }
toml = "0.4"
specs = "0.12"
specs-derive = "0.2"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.0"

[build-dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde-xml-rs = "0.2"
